[tool.poetry]
name = "bravo_tango"
version = "0.1.0"
description = ""
authors = ["Justin Son <redwood9d@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
"ruamel.yaml" = "^0.17.21"
pyinstaller = "^4.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
